# firebase-auth-rs

./: .gitignore  Cargo.toml  build.rs
proto/appengine/: app_identity_service.proto
proto/remote/: remote_api.proto
src/: auth.rs  clock.rs  error.rs  json.rs  lib.rs  tenant_management.rs  token_generator.rs  token_verifier.rs
