[package]
name = "firebase-auth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signature = "1.5"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
prost = "0.11"
x509-certificate = "0.13"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
